[package]
name = "webfortune"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.x", features = ["rt-multi-thread", "macros"] }
hyper = { version = "1.2.x", features = ["http1", "server"] }
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"
once_cell = "1.19.0"
futures = "0.3.x"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.10.x"